# python3

./: .dockerignore  .editorconfig  .envcrypt  .gitattributes  .hogignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.package  LICENSE  README.md  docker-bake.hcl  mise.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/workflows/: bump.yml  ci.yml  dependabot-auto-merge.yml  ghas-scan.yml  pr-check.yml  release.yml
.mise/tasks/: build  bump:major  bump:minor  bump:patch  bump:prerel  ci:all  compile  completions  docker:build  docker:push  fmt  fmt:check  gh:token  git:config  hooks:install  hooks:sync  install  lint  lint:fix  project:init  run  scan:deps  scan:ghas  scan:secrets  secrets:init  secrets:resolve  tag:clean  tag:create  tag:fetch  tag:list  tag:push  tag:remote  tag:sync  test  test:cov  test:watch  typecheck  vcs:protect  vcs:rebase  vcs:release  (+3 more)
.mise/tasks/bump/: major  minor  patch  prerel
.mise/tasks/ci/: all
.mise/tasks/docker/: build  push
.mise/tasks/fmt/: _default  check
.mise/tasks/gh/: token
.mise/tasks/git/: config
.mise/tasks/hooks/: install  sync
.mise/tasks/lint/: _default  fix
.mise/tasks/project/: init
.mise/tasks/scan/: deps  ghas  sast
.mise/tasks/secrets/: init  resolve
.mise/tasks/tag/: _default  clean  create  fetch  push  remote  sync
.mise/tasks/test/: _default  cov  watch
.mise/tasks/vcs/: integrate  protect  rebase  release
.mise/tasks/version/: _default  init  sync
config/githooks/hooks/: commit-msg  pre-commit  pre-push
scripts/: colors.sh  resolve_secrets.sh  semver.sh  sync_githooks.sh  transcrypt_bootstrap.sh
src/python_template/: __init__.py  __main__.py  version.py
src/python_template/commands/: __init__.py  greet.py  info.py
src/python_template/core/: __init__.py  base.py
tests/: __init__.py  conftest.py  test_commands.py  test_main.py  test_version.py
