[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-template"
version = "0.1.0"
description = "Python 3 template using UV, Ruff, Ty, pytest, and Mise"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "ørchestras", email = "dev@orchestras.io" }]
keywords = ["template", "python", "uv", "ruff", "mise"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []


[project.scripts]
python-template = "python_template.__main__:main"

[project.urls]
Homepage = "https://github.com/orchestras/python3"
Repository = "https://github.com/orchestras/python3"
Changelog = "https://github.com/orchestras/python3/blob/main/CHANGELOG.md"

# ─── Hatch ───────────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/python_template"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE", "CHANGELOG.md"]

# ─── UV ──────────────────────────────────────────────────────────────────────

[tool.uv]
# uv uses dependency-groups for dev dependencies (PEP 735)

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-xdist>=3.8.0",
  "pytest-asyncio>=1.3.0",
  "coverage[toml]>=7.6",
  "pyinstaller>=6.19.0",
]

# ─── Ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = [
  ".git",
  ".ruff_cache",
  ".uv",
  "__pycache__",
  "dist",
  "build",
  "*.egg-info",
]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # Pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "S",    # flake8-bandit (security)
  "T20",  # flake8-print
  "RET",  # flake8-return
  "SIM",  # flake8-simplify
  "TCH",  # flake8-type-checking
  "ANN",  # flake8-annotations
  "D",    # pydocstyle
  "PT",   # flake8-pytest-style
  "ERA",  # eradicate (commented-out code)
  "PL",   # Pylint
  "TRY",  # tryceratops
  "PERF", # perflint
  "RUF",  # Ruff-specific rules
]
ignore = [
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D203",   # 1 blank line required before class docstring (conflicts with D211)
  "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
  "TRY003",  # Avoid specifying long messages outside the exception class
  "S101",    # Use of assert detected (allow in tests)
  "T201",    # Allow print statements in __main__ (CLI output)
  "PLC0415", # Allow imports inside functions (lazy imports for CLI startup)
  "ANN401",  # Any is needed for **kwargs in abstract base classes
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D", "PLR2004", "TCH", "TC"]
"src/python_template/version.py" = ["ERA001"]

[tool.ruff.lint.isort]
known-first-party = ["python_template"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ─── Ty (type checker) ───────────────────────────────────────────────────────

[tool.ty]
# ty is the new type checker from Astral (replaces mypy for Ruff ecosystem)
# Configuration via pyproject.toml [tool.ty] section

# ─── Pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--tb=short",
  "-ra",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

# ─── Coverage ────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/python_template"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 80
